<resources>
    <string name="app_name">Android Vehicle Terminal</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">Software Development for Networks</string>
    <string name="app_subtitle">1) Set IP address, port and transmission runtime from the Settings in the upper right menu.\n
        2) Click the "Start" button to begin transmitting this vehicle\'s data to the Edge Server. </string>
    <string name="button_start">START</string>
    <string name="button_stop">STOP</string>
    <string name="button_exit">EXIT</string>
    <string name="runtimeText">Not Connected</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preferences -->
    <string name="settings_server">Server Connection</string>
    <string name="setting_runtime">Runtime</string>
    <string name="setting_ip">IP Address</string>
    <string name="setting_port">Port</string>

    <!-- Messages Preferences -->
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_live_map">Map</string>
</resources>
