<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/settings_server">

        <EditTextPreference
            app:key="ipAddr"
            app:defaultValue="85.72.152.109"
            app:title="@string/setting_ip"
            android:inputType="number"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="port"
            app:defaultValue="1883"
            app:title="@string/setting_port"
            android:inputType="numberDecimal"
            android:digits="0123456789"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/setting_runtime">

        <EditTextPreference
            android:inputType="numberDecimal"
            android:digits="0123456789"
            app:key="runtime"
            app:title="@string/setting_runtime"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory>

        <Preference
            android:id="@+id/exitButton"
            android:layout_marginTop="32sp"
            android:clickable="true"
            android:textColor="@color/colorAccent"
            app:key="exitButton"
            app:title="Exit" />

    </PreferenceCategory>

</PreferenceScreen>
